# ray-tracer

./: .clang-format  CApp.cpp  CApp.hpp  CMakeLists.txt  main.cpp
RayTrace/: camera.cpp  camera.hpp  gtfm.cpp  gtfm.hpp  image.cpp  image.hpp  ray.cpp  ray.hpp  scene.cpp  scene.hpp
RayTrace/qbLights/: lightbase.cpp  lightbase.hpp  pointlight.cpp  pointlight.hpp
RayTrace/qbLinAlg/: qbMatrix.h  qbVector.h
RayTrace/qbMaterials/: materialbase.cpp  materialbase.hpp  simplematerial.cpp  simplematerial.hpp  simplerefractive.cpp  simplerefractive.hpp
RayTrace/qbPrimatives/: cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp  objectbase.cpp  objectbase.hpp  objplane.cpp  objplane.hpp  objsphere.cpp  objsphere.hpp
RayTrace/qbTextures/: checker.cpp  checker.hpp  flat.cpp  flat.hpp  image.cpp  image.hpp  texturebase.cpp  texturebase.hpp
RayTrace/rtLights/: lightbase.cpp  lightbase.hpp  pointlight.cpp  pointlight.hpp
RayTrace/rtLinAlg/: rtEIG.h  rtLSQ.h  rtLinSolve.h  rtMatrix.h  rtPCA.h  rtQR.h  rtVector.h
RayTrace/rtMaterials/: materialbase.cpp  materialbase.hpp  simplematerial.cpp  simplematerial.hpp  simplerefractive.cpp  simplerefractive.hpp
RayTrace/rtPrimatives/: cone.cpp  cone.hpp  cylinder.cpp  cylinder.hpp  objectbase.cpp  objectbase.hpp  objplane.cpp  objplane.hpp  objsphere.cpp  objsphere.hpp
RayTrace/rtTextures/: checker.cpp  checker.hpp  flat.cpp  flat.hpp  image.cpp  image.hpp  texturebase.cpp  texturebase.hpp
